parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> print_instr
Rule 5     instruction -> assignment
Rule 6     instruction -> choice_instr
Rule 7     instruction -> while_instr
Rule 8     instruction -> for_instr
Rule 9     instruction -> return_instr
Rule 10    instruction -> break_instr
Rule 11    instruction -> continue_instr
Rule 12    instruction -> compound_instr
Rule 13    print_instr -> PRINT expr_list ;
Rule 14    print_instr -> PRINT error ;
Rule 15    assignment -> id assign_operator expression ;
Rule 16    assignment -> ref assign_operator expression ;
Rule 17    ref -> id [ expr_list ]
Rule 18    assign_operator -> =
Rule 19    assign_operator -> ADDASSIGN
Rule 20    assign_operator -> SUBASSIGN
Rule 21    assign_operator -> MULASSIGN
Rule 22    assign_operator -> DIVASSIGN
Rule 23    vector -> [ expressions ]
Rule 24    expressions -> expression
Rule 25    expressions -> expressions , expression
Rule 26    choice_instr -> IF ( condition ) instruction
Rule 27    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 28    choice_instr -> IF ( error ) instruction
Rule 29    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 30    while_instr -> WHILE ( condition ) instruction
Rule 31    while_instr -> WHILE ( error ) instruction
Rule 32    for_instr -> FOR id = range instruction
Rule 33    range -> expression : expression
Rule 34    return_instr -> RETURN expression ;
Rule 35    continue_instr -> CONTINUE ;
Rule 36    break_instr -> BREAK ;
Rule 37    compound_instr -> { instructions }
Rule 38    condition -> expression
Rule 39    const -> INTNUM
Rule 40    const -> FLOATNUM
Rule 41    const -> STRING
Rule 42    expression -> const
Rule 43    expression -> id
Rule 44    expression -> ref
Rule 45    expression -> vector
Rule 46    expression -> matrix_operation
Rule 47    expression -> matrix_function
Rule 48    expression -> minus_matrix
Rule 49    expression -> matrix_transposed
Rule 50    expression -> expression + expression
Rule 51    expression -> expression - expression
Rule 52    expression -> expression * expression
Rule 53    expression -> expression / expression
Rule 54    expression -> expression EQ expression
Rule 55    expression -> expression NE expression
Rule 56    expression -> expression LT expression
Rule 57    expression -> expression GT expression
Rule 58    expression -> expression LE expression
Rule 59    expression -> expression GE expression
Rule 60    expression -> ( expression )
Rule 61    expression -> ( error )
Rule 62    id -> ID
Rule 63    matrix_operation -> matrix dot_operation matrix
Rule 64    dot_operation -> DOTADD
Rule 65    dot_operation -> DOTSUB
Rule 66    dot_operation -> DOTMUL
Rule 67    dot_operation -> DOTDIV
Rule 68    matrix -> id
Rule 69    matrix -> minus_matrix
Rule 70    matrix -> matrix_transposed
Rule 71    matrix_transposed -> matrix '
Rule 72    minus_matrix -> - matrix
Rule 73    matrix_function -> ZEROS ( expressions )
Rule 74    matrix_function -> ONES ( expressions )
Rule 75    matrix_function -> EYE ( expressions )
Rule 76    expr_list -> expr_list , expression
Rule 77    expr_list -> expression

Terminals, with rules where they appear

'                    : 71
(                    : 26 27 28 29 30 31 60 61 73 74 75
)                    : 26 27 28 29 30 31 60 61 73 74 75
*                    : 52
+                    : 50
,                    : 25 76
-                    : 51 72
/                    : 53
:                    : 33
;                    : 13 14 15 16 34 35 36
=                    : 18 32
ADDASSIGN            : 19
BREAK                : 36
COMMENT              : 
CONTINUE             : 35
DIVASSIGN            : 22
DOTADD               : 64
DOTDIV               : 67
DOTMUL               : 66
DOTSUB               : 65
ELSE                 : 27 29
EQ                   : 54
EYE                  : 75
FLOATNUM             : 40
FOR                  : 32
GE                   : 59
GT                   : 57
ID                   : 62
IF                   : 26 27 28 29
INTNUM               : 39
LE                   : 58
LT                   : 56
MULASSIGN            : 21
NE                   : 55
ONES                 : 74
PRINT                : 13 14
RETURN               : 34
STRING               : 41
SUBASSIGN            : 20
WHILE                : 30 31
ZEROS                : 73
[                    : 17 23
]                    : 17 23
error                : 14 28 29 31 61
{                    : 37
}                    : 37

Nonterminals, with rules where they appear

assign_operator      : 15 16
assignment           : 5
break_instr          : 10
choice_instr         : 6
compound_instr       : 12
condition            : 26 27 30
const                : 42
continue_instr       : 11
dot_operation        : 63
expr_list            : 13 17 76
expression           : 15 16 24 25 33 33 34 38 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 76 77
expressions          : 23 25 73 74 75
for_instr            : 8
id                   : 15 17 32 43 68
instruction          : 2 3 26 27 27 28 29 29 30 31 32
instructions         : 1 2 37
matrix               : 63 63 71 72
matrix_function      : 47
matrix_operation     : 46
matrix_transposed    : 49 70
minus_matrix         : 48 69
print_instr          : 4
program              : 0
range                : 32
ref                  : 16 44
return_instr         : 9
vector               : 45
while_instr          : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . print_instr
    (5) instruction -> . assignment
    (6) instruction -> . choice_instr
    (7) instruction -> . while_instr
    (8) instruction -> . for_instr
    (9) instruction -> . return_instr
    (10) instruction -> . break_instr
    (11) instruction -> . continue_instr
    (12) instruction -> . compound_instr
    (13) print_instr -> . PRINT expr_list ;
    (14) print_instr -> . PRINT error ;
    (15) assignment -> . id assign_operator expression ;
    (16) assignment -> . ref assign_operator expression ;
    (26) choice_instr -> . IF ( condition ) instruction
    (27) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (28) choice_instr -> . IF ( error ) instruction
    (29) choice_instr -> . IF ( error ) instruction ELSE instruction
    (30) while_instr -> . WHILE ( condition ) instruction
    (31) while_instr -> . WHILE ( error ) instruction
    (32) for_instr -> . FOR id = range instruction
    (34) return_instr -> . RETURN expression ;
    (36) break_instr -> . BREAK ;
    (35) continue_instr -> . CONTINUE ;
    (37) compound_instr -> . { instructions }
    (62) id -> . ID
    (17) ref -> . id [ expr_list ]

    PRINT           shift and go to state 13
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    RETURN          shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    {               shift and go to state 22
    ID              shift and go to state 23

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    print_instr                    shift and go to state 4
    assignment                     shift and go to state 5
    choice_instr                   shift and go to state 6
    while_instr                    shift and go to state 7
    for_instr                      shift and go to state 8
    return_instr                   shift and go to state 9
    break_instr                    shift and go to state 10
    continue_instr                 shift and go to state 11
    compound_instr                 shift and go to state 12
    id                             shift and go to state 14
    ref                            shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . print_instr
    (5) instruction -> . assignment
    (6) instruction -> . choice_instr
    (7) instruction -> . while_instr
    (8) instruction -> . for_instr
    (9) instruction -> . return_instr
    (10) instruction -> . break_instr
    (11) instruction -> . continue_instr
    (12) instruction -> . compound_instr
    (13) print_instr -> . PRINT expr_list ;
    (14) print_instr -> . PRINT error ;
    (15) assignment -> . id assign_operator expression ;
    (16) assignment -> . ref assign_operator expression ;
    (26) choice_instr -> . IF ( condition ) instruction
    (27) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (28) choice_instr -> . IF ( error ) instruction
    (29) choice_instr -> . IF ( error ) instruction ELSE instruction
    (30) while_instr -> . WHILE ( condition ) instruction
    (31) while_instr -> . WHILE ( error ) instruction
    (32) for_instr -> . FOR id = range instruction
    (34) return_instr -> . RETURN expression ;
    (36) break_instr -> . BREAK ;
    (35) continue_instr -> . CONTINUE ;
    (37) compound_instr -> . { instructions }
    (62) id -> . ID
    (17) ref -> . id [ expr_list ]

    $end            reduce using rule 1 (program -> instructions .)
    PRINT           shift and go to state 13
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    RETURN          shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    {               shift and go to state 22
    ID              shift and go to state 23

    instruction                    shift and go to state 24
    print_instr                    shift and go to state 4
    assignment                     shift and go to state 5
    choice_instr                   shift and go to state 6
    while_instr                    shift and go to state 7
    for_instr                      shift and go to state 8
    return_instr                   shift and go to state 9
    break_instr                    shift and go to state 10
    continue_instr                 shift and go to state 11
    compound_instr                 shift and go to state 12
    id                             shift and go to state 14
    ref                            shift and go to state 15

state 3

    (3) instructions -> instruction .

    PRINT           reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    FOR             reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    {               reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    }               reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> print_instr .

    PRINT           reduce using rule 4 (instruction -> print_instr .)
    IF              reduce using rule 4 (instruction -> print_instr .)
    WHILE           reduce using rule 4 (instruction -> print_instr .)
    FOR             reduce using rule 4 (instruction -> print_instr .)
    RETURN          reduce using rule 4 (instruction -> print_instr .)
    BREAK           reduce using rule 4 (instruction -> print_instr .)
    CONTINUE        reduce using rule 4 (instruction -> print_instr .)
    {               reduce using rule 4 (instruction -> print_instr .)
    ID              reduce using rule 4 (instruction -> print_instr .)
    $end            reduce using rule 4 (instruction -> print_instr .)
    }               reduce using rule 4 (instruction -> print_instr .)
    ELSE            reduce using rule 4 (instruction -> print_instr .)


state 5

    (5) instruction -> assignment .

    PRINT           reduce using rule 5 (instruction -> assignment .)
    IF              reduce using rule 5 (instruction -> assignment .)
    WHILE           reduce using rule 5 (instruction -> assignment .)
    FOR             reduce using rule 5 (instruction -> assignment .)
    RETURN          reduce using rule 5 (instruction -> assignment .)
    BREAK           reduce using rule 5 (instruction -> assignment .)
    CONTINUE        reduce using rule 5 (instruction -> assignment .)
    {               reduce using rule 5 (instruction -> assignment .)
    ID              reduce using rule 5 (instruction -> assignment .)
    $end            reduce using rule 5 (instruction -> assignment .)
    }               reduce using rule 5 (instruction -> assignment .)
    ELSE            reduce using rule 5 (instruction -> assignment .)


state 6

    (6) instruction -> choice_instr .

    PRINT           reduce using rule 6 (instruction -> choice_instr .)
    IF              reduce using rule 6 (instruction -> choice_instr .)
    WHILE           reduce using rule 6 (instruction -> choice_instr .)
    FOR             reduce using rule 6 (instruction -> choice_instr .)
    RETURN          reduce using rule 6 (instruction -> choice_instr .)
    BREAK           reduce using rule 6 (instruction -> choice_instr .)
    CONTINUE        reduce using rule 6 (instruction -> choice_instr .)
    {               reduce using rule 6 (instruction -> choice_instr .)
    ID              reduce using rule 6 (instruction -> choice_instr .)
    $end            reduce using rule 6 (instruction -> choice_instr .)
    }               reduce using rule 6 (instruction -> choice_instr .)
    ELSE            reduce using rule 6 (instruction -> choice_instr .)


state 7

    (7) instruction -> while_instr .

    PRINT           reduce using rule 7 (instruction -> while_instr .)
    IF              reduce using rule 7 (instruction -> while_instr .)
    WHILE           reduce using rule 7 (instruction -> while_instr .)
    FOR             reduce using rule 7 (instruction -> while_instr .)
    RETURN          reduce using rule 7 (instruction -> while_instr .)
    BREAK           reduce using rule 7 (instruction -> while_instr .)
    CONTINUE        reduce using rule 7 (instruction -> while_instr .)
    {               reduce using rule 7 (instruction -> while_instr .)
    ID              reduce using rule 7 (instruction -> while_instr .)
    $end            reduce using rule 7 (instruction -> while_instr .)
    }               reduce using rule 7 (instruction -> while_instr .)
    ELSE            reduce using rule 7 (instruction -> while_instr .)


state 8

    (8) instruction -> for_instr .

    PRINT           reduce using rule 8 (instruction -> for_instr .)
    IF              reduce using rule 8 (instruction -> for_instr .)
    WHILE           reduce using rule 8 (instruction -> for_instr .)
    FOR             reduce using rule 8 (instruction -> for_instr .)
    RETURN          reduce using rule 8 (instruction -> for_instr .)
    BREAK           reduce using rule 8 (instruction -> for_instr .)
    CONTINUE        reduce using rule 8 (instruction -> for_instr .)
    {               reduce using rule 8 (instruction -> for_instr .)
    ID              reduce using rule 8 (instruction -> for_instr .)
    $end            reduce using rule 8 (instruction -> for_instr .)
    }               reduce using rule 8 (instruction -> for_instr .)
    ELSE            reduce using rule 8 (instruction -> for_instr .)


state 9

    (9) instruction -> return_instr .

    PRINT           reduce using rule 9 (instruction -> return_instr .)
    IF              reduce using rule 9 (instruction -> return_instr .)
    WHILE           reduce using rule 9 (instruction -> return_instr .)
    FOR             reduce using rule 9 (instruction -> return_instr .)
    RETURN          reduce using rule 9 (instruction -> return_instr .)
    BREAK           reduce using rule 9 (instruction -> return_instr .)
    CONTINUE        reduce using rule 9 (instruction -> return_instr .)
    {               reduce using rule 9 (instruction -> return_instr .)
    ID              reduce using rule 9 (instruction -> return_instr .)
    $end            reduce using rule 9 (instruction -> return_instr .)
    }               reduce using rule 9 (instruction -> return_instr .)
    ELSE            reduce using rule 9 (instruction -> return_instr .)


state 10

    (10) instruction -> break_instr .

    PRINT           reduce using rule 10 (instruction -> break_instr .)
    IF              reduce using rule 10 (instruction -> break_instr .)
    WHILE           reduce using rule 10 (instruction -> break_instr .)
    FOR             reduce using rule 10 (instruction -> break_instr .)
    RETURN          reduce using rule 10 (instruction -> break_instr .)
    BREAK           reduce using rule 10 (instruction -> break_instr .)
    CONTINUE        reduce using rule 10 (instruction -> break_instr .)
    {               reduce using rule 10 (instruction -> break_instr .)
    ID              reduce using rule 10 (instruction -> break_instr .)
    $end            reduce using rule 10 (instruction -> break_instr .)
    }               reduce using rule 10 (instruction -> break_instr .)
    ELSE            reduce using rule 10 (instruction -> break_instr .)


state 11

    (11) instruction -> continue_instr .

    PRINT           reduce using rule 11 (instruction -> continue_instr .)
    IF              reduce using rule 11 (instruction -> continue_instr .)
    WHILE           reduce using rule 11 (instruction -> continue_instr .)
    FOR             reduce using rule 11 (instruction -> continue_instr .)
    RETURN          reduce using rule 11 (instruction -> continue_instr .)
    BREAK           reduce using rule 11 (instruction -> continue_instr .)
    CONTINUE        reduce using rule 11 (instruction -> continue_instr .)
    {               reduce using rule 11 (instruction -> continue_instr .)
    ID              reduce using rule 11 (instruction -> continue_instr .)
    $end            reduce using rule 11 (instruction -> continue_instr .)
    }               reduce using rule 11 (instruction -> continue_instr .)
    ELSE            reduce using rule 11 (instruction -> continue_instr .)


state 12

    (12) instruction -> compound_instr .

    PRINT           reduce using rule 12 (instruction -> compound_instr .)
    IF              reduce using rule 12 (instruction -> compound_instr .)
    WHILE           reduce using rule 12 (instruction -> compound_instr .)
    FOR             reduce using rule 12 (instruction -> compound_instr .)
    RETURN          reduce using rule 12 (instruction -> compound_instr .)
    BREAK           reduce using rule 12 (instruction -> compound_instr .)
    CONTINUE        reduce using rule 12 (instruction -> compound_instr .)
    {               reduce using rule 12 (instruction -> compound_instr .)
    ID              reduce using rule 12 (instruction -> compound_instr .)
    $end            reduce using rule 12 (instruction -> compound_instr .)
    }               reduce using rule 12 (instruction -> compound_instr .)
    ELSE            reduce using rule 12 (instruction -> compound_instr .)


state 13

    (13) print_instr -> PRINT . expr_list ;
    (14) print_instr -> PRINT . error ;
    (76) expr_list -> . expr_list , expression
    (77) expr_list -> . expression
    (42) expression -> . const
    (43) expression -> . id
    (44) expression -> . ref
    (45) expression -> . vector
    (46) expression -> . matrix_operation
    (47) expression -> . matrix_function
    (48) expression -> . minus_matrix
    (49) expression -> . matrix_transposed
    (50) expression -> . expression + expression
    (51) expression -> . expression - expression
    (52) expression -> . expression * expression
    (53) expression -> . expression / expression
    (54) expression -> . expression EQ expression
    (55) expression -> . expression NE expression
    (56) expression -> . expression LT expression
    (57) expression -> . expression GT expression
    (58) expression -> . expression LE expression
    (59) expression -> . expression GE expression
    (60) expression -> . ( expression )
    (61) expression -> . ( error )
    (39) const -> . INTNUM
    (40) const -> . FLOATNUM
    (41) const -> . STRING
    (62) id -> . ID
    (17) ref -> . id [ expr_list ]
    (23) vector -> . [ expressions ]
    (63) matrix_operation -> . matrix dot_operation matrix
    (73) matrix_function -> . ZEROS ( expressions )
    (74) matrix_function -> . ONES ( expressions )
    (75) matrix_function -> . EYE ( expressions )
    (72) minus_matrix -> . - matrix
    (71) matrix_transposed -> . matrix '
    (68) matrix -> . id
    (69) matrix -> . minus_matrix
    (70) matrix -> . matrix_transposed

    error           shift and go to state 26
    (               shift and go to state 37
    INTNUM          shift and go to state 38
    FLOATNUM        shift and go to state 39
    STRING          shift and go to state 40
    ID              shift and go to state 23
    [               shift and go to state 41
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    -               shift and go to state 36

    expr_list                      shift and go to state 25
    expression                     shift and go to state 27
    const                          shift and go to state 28
    id                             shift and go to state 29
    ref                            shift and go to state 30
    vector                         shift and go to state 31
    matrix_operation               shift and go to state 32
    matrix_function                shift and go to state 33
    minus_matrix                   shift and go to state 34
    matrix_transposed              shift and go to state 35
    matrix                         shift and go to state 42

state 14

    (15) assignment -> id . assign_operator expression ;
    (17) ref -> id . [ expr_list ]
    (18) assign_operator -> . =
    (19) assign_operator -> . ADDASSIGN
    (20) assign_operator -> . SUBASSIGN
    (21) assign_operator -> . MULASSIGN
    (22) assign_operator -> . DIVASSIGN

    [               shift and go to state 47
    =               shift and go to state 48
    ADDASSIGN       shift and go to state 49
    SUBASSIGN       shift and go to state 50
    MULASSIGN       shift and go to state 51
    DIVASSIGN       shift and go to state 52

    assign_operator                shift and go to state 46

state 15

    (16) assignment -> ref . assign_operator expression ;
    (18) assign_operator -> . =
    (19) assign_operator -> . ADDASSIGN
    (20) assign_operator -> . SUBASSIGN
    (21) assign_operator -> . MULASSIGN
    (22) assign_operator -> . DIVASSIGN

    =               shift and go to state 48
    ADDASSIGN       shift and go to state 49
    SUBASSIGN       shift and go to state 50
    MULASSIGN       shift and go to state 51
    DIVASSIGN       shift and go to state 52

    assign_operator                shift and go to state 53

state 16

    (26) choice_instr -> IF . ( condition ) instruction
    (27) choice_instr -> IF . ( condition ) instruction ELSE instruction
    (28) choice_instr -> IF . ( error ) instruction
    (29) choice_instr -> IF . ( error ) instruction ELSE instruction

    (               shift and go to state 54


state 17

    (30) while_instr -> WHILE . ( condition ) instruction
    (31) while_instr -> WHILE . ( error ) instruction

    (               shift and go to state 55


state 18

    (32) for_instr -> FOR . id = range instruction
    (62) id -> . ID

    ID              shift and go to state 23

    id                             shift and go to state 56

state 19

    (34) return_instr -> RETURN . expression ;
    (42) expression -> . const
    (43) expression -> . id
    (44) expression -> . ref
    (45) expression -> . vector
    (46) expression -> . matrix_operation
    (47) expression -> . matrix_function
    (48) expression -> . minus_matrix
    (49) expression -> . matrix_transposed
    (50) expression -> . expression + expression
    (51) expression -> . expression - expression
    (52) expression -> . expression * expression
    (53) expression -> . expression / expression
    (54) expression -> . expression EQ expression
    (55) expression -> . expression NE expression
    (56) expression -> . expression LT expression
    (57) expression -> . expression GT expression
    (58) expression -> . expression LE expression
    (59) expression -> . expression GE expression
    (60) expression -> . ( expression )
    (61) expression -> . ( error )
    (39) const -> . INTNUM
    (40) const -> . FLOATNUM
    (41) const -> . STRING
    (62) id -> . ID
    (17) ref -> . id [ expr_list ]
    (23) vector -> . [ expressions ]
    (63) matrix_operation -> . matrix dot_operation matrix
    (73) matrix_function -> . ZEROS ( expressions )
    (74) matrix_function -> . ONES ( expressions )
    (75) matrix_function -> . EYE ( expressions )
    (72) minus_matrix -> . - matrix
    (71) matrix_transposed -> . matrix '
    (68) matrix -> . id
    (69) matrix -> . minus_matrix
    (70) matrix -> . matrix_transposed

    (               shift and go to state 37
    INTNUM          shift and go to state 38
    FLOATNUM        shift and go to state 39
    STRING          shift and go to state 40
    ID              shift and go to state 23
    [               shift and go to state 41
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    -               shift and go to state 36

    expression                     shift and go to state 57
    const                          shift and go to state 28
    id                             shift and go to state 29
    ref                            shift and go to state 30
    vector                         shift and go to state 31
    matrix_operation               shift and go to state 32
    matrix_function                shift and go to state 33
    minus_matrix                   shift and go to state 34
    matrix_transposed              shift and go to state 35
    matrix                         shift and go to state 42

state 20

    (36) break_instr -> BREAK . ;

    ;               shift and go to state 58


state 21

    (35) continue_instr -> CONTINUE . ;

    ;               shift and go to state 59


state 22

    (37) compound_instr -> { . instructions }
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . print_instr
    (5) instruction -> . assignment
    (6) instruction -> . choice_instr
    (7) instruction -> . while_instr
    (8) instruction -> . for_instr
    (9) instruction -> . return_instr
    (10) instruction -> . break_instr
    (11) instruction -> . continue_instr
    (12) instruction -> . compound_instr
    (13) print_instr -> . PRINT expr_list ;
    (14) print_instr -> . PRINT error ;
    (15) assignment -> . id assign_operator expression ;
    (16) assignment -> . ref assign_operator expression ;
    (26) choice_instr -> . IF ( condition ) instruction
    (27) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (28) choice_instr -> . IF ( error ) instruction
    (29) choice_instr -> . IF ( error ) instruction ELSE instruction
    (30) while_instr -> . WHILE ( condition ) instruction
    (31) while_instr -> . WHILE ( error ) instruction
    (32) for_instr -> . FOR id = range instruction
    (34) return_instr -> . RETURN expression ;
    (36) break_instr -> . BREAK ;
    (35) continue_instr -> . CONTINUE ;
    (37) compound_instr -> . { instructions }
    (62) id -> . ID
    (17) ref -> . id [ expr_list ]

    PRINT           shift and go to state 13
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    RETURN          shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    {               shift and go to state 22
    ID              shift and go to state 23

    instructions                   shift and go to state 60
    instruction                    shift and go to state 3
    print_instr                    shift and go to state 4
    assignment                     shift and go to state 5
    choice_instr                   shift and go to state 6
    while_instr                    shift and go to state 7
    for_instr                      shift and go to state 8
    return_instr                   shift and go to state 9
    break_instr                    shift and go to state 10
    continue_instr                 shift and go to state 11
    compound_instr                 shift and go to state 12
    id                             shift and go to state 14
    ref                            shift and go to state 15

state 23

    (62) id -> ID .

    [               reduce using rule 62 (id -> ID .)
    =               reduce using rule 62 (id -> ID .)
    ADDASSIGN       reduce using rule 62 (id -> ID .)
    SUBASSIGN       reduce using rule 62 (id -> ID .)
    MULASSIGN       reduce using rule 62 (id -> ID .)
    DIVASSIGN       reduce using rule 62 (id -> ID .)
    +               reduce using rule 62 (id -> ID .)
    -               reduce using rule 62 (id -> ID .)
    *               reduce using rule 62 (id -> ID .)
    /               reduce using rule 62 (id -> ID .)
    EQ              reduce using rule 62 (id -> ID .)
    NE              reduce using rule 62 (id -> ID .)
    LT              reduce using rule 62 (id -> ID .)
    GT              reduce using rule 62 (id -> ID .)
    LE              reduce using rule 62 (id -> ID .)
    GE              reduce using rule 62 (id -> ID .)
    ;               reduce using rule 62 (id -> ID .)
    ,               reduce using rule 62 (id -> ID .)
    '               reduce using rule 62 (id -> ID .)
    DOTADD          reduce using rule 62 (id -> ID .)
    DOTSUB          reduce using rule 62 (id -> ID .)
    DOTMUL          reduce using rule 62 (id -> ID .)
    DOTDIV          reduce using rule 62 (id -> ID .)
    )               reduce using rule 62 (id -> ID .)
    ]               reduce using rule 62 (id -> ID .)
    :               reduce using rule 62 (id -> ID .)
    PRINT           reduce using rule 62 (id -> ID .)
    IF              reduce using rule 62 (id -> ID .)
    WHILE           reduce using rule 62 (id -> ID .)
    FOR             reduce using rule 62 (id -> ID .)
    RETURN          reduce using rule 62 (id -> ID .)
    BREAK           reduce using rule 62 (id -> ID .)
    CONTINUE        reduce using rule 62 (id -> ID .)
    {               reduce using rule 62 (id -> ID .)
    ID              reduce using rule 62 (id -> ID .)


state 24

    (2) instructions -> instructions instruction .
